--- a/contents.html
+++ b/contents.html
@@ -37,7 +37,7 @@
 			<p class="TOC"><strong>Got Six Minutes?</strong><br><a href='features/got-six-minutes.html'>Here are more amazing examples of how I write.</a></p>
 			<p class="TOC"><strong>Grace Land.</strong><br><a href='features/grace-land.html'>Doctors hand out pills like candy nowadays, the good kind and the ones you agree to take to get them to give you the good kind.</a></p>
 			<p class="TOC"><strong>Here I Am.</strong><br><a href='features/here-I-am.html'>The whole thing is a house of cards that depends on somebody else keeping his promises.</a></p>
-			<p class="TOC"><strong>In Pictures.</strong><br><a href='https://he-wept.github.io/gallery/'>You are here.</a></p>
+			<p class="TOC"><strong>In Pictures.</strong><br><a href='https://wallaceheller.github.io/gallery/'>You are here.</a></p>
 			<p class="TOC"><strong>Jump. NEW</strong><br><a href='features/jump.html'>This is not about a virus or a vaccine.</a></p>
 			<p class="TOC"><strong>Welcome.</strong><br><a href='https://he-wept.github.io/1/'>Nobody writes like Wallace Heller.</a></p>
 			<p class="TOC"><strong>Language of the Illiterate.</strong><br><a href='features/language.html'>That homeboys is a feeling you ain't had before.</a></p>
@@ -63,7 +63,7 @@
 			<p>&nbsp;</p>
             <p><a href='index.html'>Welcome.</a></p>
 			<!-- <p><a href='contents.html'>Table of Contents.</a></p> -->
-            <p><a href="https://he-wept.github.io/gallery/">Gallery.</a></p>
+            <p><a href="https://wallaceheller.github.io/gallery/">Gallery.</a></p>
 			<p><a href='privacy.html'>Privacy.</a></p>
             <p><a href='lets-talk.html'>Contact.</a></p>
             <p>&nbsp;</p>
