--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>&nbsp;</p>
 			<p>&nbsp;</p>
 			<!-- <p><a href='contents.html'>Table of Contents.</a></p> -->
-            <p><a href="https://he-wept.github.io/gallery/">Gallery.</a></p>
+            <p><a href="https://wallaceheller.github.io/gallery/">Gallery.</a></p>
 			<p><a href='privacy.html'>Privacy.</a></p>
             <!-- <p><a href='lets-talk.html'>Contact.</a></p> -->
             <p>&nbsp;</p>
