--- a/contents.html
+++ b/contents.html
@@ -7,12 +7,12 @@
 		<title>He Wept: Contents.</title>
 		<meta name="description" content="Fiction and opinion.">
 		<link rel="stylesheet" href="styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="Table of contents." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/contents.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/contents.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/contents.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/contents.html" />
 	</head>
 
 	<body>
@@ -39,7 +39,7 @@
 			<p class="TOC"><strong>Here I Am.</strong><br><a href='features/here-I-am.html'>The whole thing is a house of cards that depends on somebody else keeping his promises.</a></p>
 			<p class="TOC"><strong>In Pictures.</strong><br><a href='https://wallaceheller.github.io/gallery/'>You are here.</a></p>
 			<p class="TOC"><strong>Jump. NEW</strong><br><a href='features/jump.html'>This is not about a virus or a vaccine.</a></p>
-			<p class="TOC"><strong>Welcome.</strong><br><a href='https://he-wept.github.io/1/'>Nobody writes like Wallace Heller.</a></p>
+			<p class="TOC"><strong>Welcome.</strong><br><a href='https://wallaceheller.github.io/he-wept/'>Nobody writes like Wallace Heller.</a></p>
 			<p class="TOC"><strong>Language of the Illiterate.</strong><br><a href='features/language.html'>That homeboys is a feeling you ain't had before.</a></p>
 			<p class="TOC"><strong>&quot;La cuenta, por favor.&quot;</strong><br><a href='features/la-cuenta-por-favor.html'>Unfinished conversations.</a></p>
 			<p class="TOC"><strong>Let's Talk.</strong><br><a href='lets-talk.html'>Holler or shout.</a></p>
