--- a/features/best-freakin-xmas.html
+++ b/features/best-freakin-xmas.html
@@ -7,12 +7,12 @@
 		<title>Best Freakin' Christmas</title>
 		<meta name="description" content="He pulled into a parking lot that only got plowed half-heartedly when somebody called in a favor. The snow was heaped in a mound along the fence. Slush-filled ruts crisscrossed the pavement. Ice cracked and popped as he walked across it.">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="The Best Freakin' Christmas." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/best-freakin-xmas.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/best-freakin-xmas.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/best-freakin-xmas.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/best-freakin-xmas.html" />
 	</head>
 
 	<body>
