--- a/features/here-I-am.html
+++ b/features/here-I-am.html
@@ -7,12 +7,12 @@
 		<title>Here I Am</title>
 		<meta name="description" content="I'm a young woman who's not so young anymore, who's feeling like she's missed something, something that can't be brought back no matter what">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="Here I Am." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/here-I-am.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/here-I-am.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/here-I-am.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/here-I-am.html" />
 	</head>
 
 	<body>
