--- a/features/jump.html
+++ b/features/jump.html
@@ -7,12 +7,12 @@
 		<title>Jump</title>
 		<meta name="description" content="If taken at face value, this sort of thing doesn't happen every day&mdash;or every decade. Given the hype, it's as if flying saucers suddenly appeared over the nation's capitol.">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="Jump." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/jump.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/jump.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/jump.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/jump.html" />
 	</head>
 
 	<body>
