--- a/features/my-masquerade.html
+++ b/features/my-masquerade.html
@@ -7,12 +7,12 @@
 		<title>My Masquerade</title>
 		<meta name="description" content="Do you know what it's like to want something so badly that your throat feels tight and your skin crawls at the thought of not having it, because you know what it's like to go without and that's no longer an option?">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="My Masquerade." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/my-masquerade.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/my-masquerade.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/my-masquerade.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/my-masquerade.html" />
 	</head>
 
 	<body>
