--- a/features/paw-paw.html
+++ b/features/paw-paw.html
@@ -7,12 +7,12 @@
 		<title>Paw-Paw</title>
 		<meta name="description" content="One day, Mom takes it, takes it and sells it to a neighbor, an acquaintance, somebody she just met.">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="Paw-Paw." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/paw-paw.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/paw-paw.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/paw-paw.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/paw-paw.html" />
 	</head>
 
 	<body>
