--- a/features/teasers.html
+++ b/features/teasers.html
@@ -7,19 +7,19 @@
 		<title>Teasers.</title>
 		<meta name="description" content="It's like what you do from 15 to 25 decides what you're going to do from 25 to 65. I wish I had seen that. I wish somebody had told me.">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="Teasers." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/teasers.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/teasers.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/teasers.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/teasers.html" />
 	</head>
 
 	<body>
 		<div class="container content">
 			<header class="masthead">
 				<h3 class="masthead-title">
-					<a href="https://he-wept.github.io/1/">He Wept</a>
+					<a href="https://wallaceheller.github.io/he-wept/">He Wept</a>
 					<small>by Wallace Heller</small>
 				</h2>
 			</header>
