--- a/features/the-merch.html
+++ b/features/the-merch.html
@@ -7,12 +7,12 @@
 		<title>The Merch</title>
 		<meta name="description" content="Not sold in stores. Not seen on TV.">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="The Merch." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/the-merch.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/the-merch.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/the-merch.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/the-merch.html" />
 	</head>
 
 	<body>
