--- a/features/trato-de-novios.html
+++ b/features/trato-de-novios.html
@@ -7,12 +7,12 @@
 		<title>Trato de Novios</title>
 		<meta name="description" content="The weeds that grow along the curb seem so much taller after it rains. Sometimes, hope makes a comeback or at least a cameo.">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="Trato de Novios." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/trato-de-novios.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/trato-de-novios.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/trato-de-novios.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/trato-de-novios.html" />
 	</head>
 
 	<body>
@@ -47,10 +47,10 @@
 			<p class="caption">Hope makes a cameo. (Photo by author.)</p>
 			<p>&nbsp;</p>
 			<p>DOWNLOAD THE PDF PRESS KIT.</p>
-			<h4 id='trato-de-novios---an-autopsy-of-desire-english'><a href='https://he-wept.github.io/1/downloads/Trato de Novios PRESS KIT English.pdf'>Trato de Novios - An Autopsy of Desire (English).</a></h4>
+			<h4 id='trato-de-novios---an-autopsy-of-desire-english'><a href='https://wallaceheller.github.io/he-wept/downloads/Trato de Novios PRESS KIT English.pdf'>Trato de Novios - An Autopsy of Desire (English).</a></h4>
 			<p>&nbsp;</p>
 			<p>DESCARGA EL ARCHIVO PDF DOSIER DE PRENSA.</p>
-			<h4 id='trato-de-novios---una-autopsia-del-deseo-español'><strong><a href='https://he-wept.github.io/1/downloads/Trato de Novios DOSIER DE PRENSA Español.pdf'>Trato de novios - Una autopsia del deseo (español).</a></strong></h4>
+			<h4 id='trato-de-novios---una-autopsia-del-deseo-español'><strong><a href='https://wallaceheller.github.io/he-wept/downloads/Trato de Novios DOSIER DE PRENSA Español.pdf'>Trato de novios - Una autopsia del deseo (español).</a></strong></h4>
 			<hr>
 			<p>&nbsp;</p>
 			<p>&nbsp;</p>
