--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 		<meta property="og:title" content="He Wept." />
 		<meta property="og:description" content="Nobody writes like Wallace Heller. Nobody." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
 		<meta property="og:image:type" content="image/png" /> 
 		<meta property="og:image:width" content="2000" /> 
 		<meta property="og:image:height" content="1333" />
-		<link rel="canonical" href="https://he-wept.github.io/1/" />
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/" />
 	</head>
 
 	<body>
