--- a/prologue-quickstart.html
+++ b/prologue-quickstart.html
@@ -7,12 +7,12 @@
 		<title>He Wept: Prologue / Quickstart.</title>
 		<meta name="description" content="Nobody writes like Wallace Heller. Nobody.">
 		<link rel="stylesheet" href="styles.css">
-        <link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+        <link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="Prologue / Quickstart." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/prologue-quickstart.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/prologue-quickstart.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/prologue-quickstart.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/prologue-quickstart.html" />
 	</head>
 
 	<body>
@@ -30,14 +30,14 @@
             <br>
 			<div style="padding:0 1rem;border: 1pt solid #000000;"><p>What you are about to experience is a work of fiction. Any resemblance to actual persons, places, themes, or events is purely coincidental.</p></div>
             <br>
-			<p class="TOC"><strong>Got Three Minutes?</strong><br><a href='https://he-wept.github.io/1/features/got-three-minutes.html'>Here are some amazing examples of how I write.</a> </p>
-            <p class="TOC"><strong>Got Six Minutes?</strong><br><a href='https://he-wept.github.io/1/features/got-six-minutes.html'>Here are more amazing examples of how I write.</a></p>
-            <p class="TOC"><strong>An Interview.</strong><br><a href='https://he-wept.github.io/1/features/an-interview.html'>Storytelling goes way back.</a></p>
-            <p class="TOC"><strong>Teasers.</strong><br><a href='https://he-wept.github.io/1/features/teasers.html'>Ordinary lives. Extraordinary stories.</a></p>
-            <p class="TOC"><strong>The Premise.</strong><br><a href='https://he-wept.github.io/1/features/the-premise.html'>Let's build a brand.</a></p>
-            <p class="TOC"><strong>Special Feature.</strong><br><a href='https://he-wept.github.io/1/features/trato-de-novios.html'>Trato de Novios.</a> </p>
-            <p class="TOC"><strong>DOWNLOAD THE LATEST PROJECT:</strong><br><a href='https://he-wept.github.io/1/downloads/Trato de Novios PRESS KIT English.pdf'>English.</a></p>
-            <p class="TOC"><strong>DESCARGA EL ÚLTIMO PROYECTO:</strong><br><a href='https://he-wept.github.io/1/downloads/Trato de Novios DOSIER DE PRENSA Español.pdf'>Español.</a></p>
+			<p class="TOC"><strong>Got Three Minutes?</strong><br><a href='https://wallaceheller.github.io/he-wept/features/got-three-minutes.html'>Here are some amazing examples of how I write.</a> </p>
+            <p class="TOC"><strong>Got Six Minutes?</strong><br><a href='https://wallaceheller.github.io/he-wept/features/got-six-minutes.html'>Here are more amazing examples of how I write.</a></p>
+            <p class="TOC"><strong>An Interview.</strong><br><a href='https://wallaceheller.github.io/he-wept/features/an-interview.html'>Storytelling goes way back.</a></p>
+            <p class="TOC"><strong>Teasers.</strong><br><a href='https://wallaceheller.github.io/he-wept/features/teasers.html'>Ordinary lives. Extraordinary stories.</a></p>
+            <p class="TOC"><strong>The Premise.</strong><br><a href='https://wallaceheller.github.io/he-wept/features/the-premise.html'>Let's build a brand.</a></p>
+            <p class="TOC"><strong>Special Feature.</strong><br><a href='https://wallaceheller.github.io/he-wept/features/trato-de-novios.html'>Trato de Novios.</a> </p>
+            <p class="TOC"><strong>DOWNLOAD THE LATEST PROJECT:</strong><br><a href='https://wallaceheller.github.io/he-wept/downloads/Trato de Novios PRESS KIT English.pdf'>English.</a></p>
+            <p class="TOC"><strong>DESCARGA EL ÚLTIMO PROYECTO:</strong><br><a href='https://wallaceheller.github.io/he-wept/downloads/Trato de Novios DOSIER DE PRENSA Español.pdf'>Español.</a></p>
             <hr>
             <p>&nbsp;</p>
 			<p>&nbsp;</p>
