--- a/features/everything-must-go.html
+++ b/features/everything-must-go.html
@@ -7,12 +7,12 @@
 		<title>Everything Must Go.</title>
 		<meta name="description" content="One thing's for sure. Time is never kind and rarely gentile. What isn't dead is dying. ">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="Everything Must Go." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/everything-must-go.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/everything-must-go.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/everything-must-go.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/everything-must-go.html" />
 	</head>
 
 	<body>
