--- a/features/fat-guy.html
+++ b/features/fat-guy.html
@@ -7,12 +7,12 @@
 		<title>The Fat Guy and the Little Boy Who Did Not Forget</title>
 		<meta name="description" content="Traffic was moving again. He was headed God knows where. To the liquor store. To nowhere in particular. To sit in the basement with his cousin Eddie. Eddie liked to drink. Got his disability check on the third, and he was good to go.">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="The Fat Guy and the Little Boy Who Did Not Forget." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/fat-guy.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/fat-guy.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/fat-guy.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/fat-guy.html" />
 	</head>
 
 	<body>
