--- a/features/grace-land.html
+++ b/features/grace-land.html
@@ -7,12 +7,12 @@
 		<title>Grace Land</title>
 		<meta name="description" content="The sound of music and people shouting briefly filled the night each time someone opened the door of the tavern halfway down the block. A squad car passed and disappeared out of sight.">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="Grace Land." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/grace-land.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/grace-land.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/grace-land.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/grace-land.html" />
 	</head>
 
 	<body>
