--- a/features/la-cuenta-por-favor.html
+++ b/features/la-cuenta-por-favor.html
@@ -7,12 +7,12 @@
 		<title>La cuenta, por favor.</title>
 		<meta name="description" content="Her words stung. Truth always does, especially when it's not on your side.">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="La cuenta, por favor." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/la-cuenta-por-favor.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/la-cuenta-por-favor.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/la-cuenta-por-favor.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/la-cuenta-por-favor.html" />
 	</head>
 
 	<body>
