--- a/features/language.html
+++ b/features/language.html
@@ -7,12 +7,12 @@
 		<title>Language of the Illiterate</title>
 		<meta name="description" content="This is the first chance you get at social expression that won't land yourself in the joint. That homeboys is a feeling you ain't had before.">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="Language of the Illiterate." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/language.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/language.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/language.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/language.html" />
 	</head>
 
 	<body>
