--- a/features/ready-in-minutes.html
+++ b/features/ready-in-minutes.html
@@ -7,12 +7,12 @@
 		<title>Ready in Minutes</title>
 		<meta name="description" content="Call them a keepsake, a memento, a souvenir that goes home in a pocket to be set aside, forgotten like dreams and other things you buy.">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="Ready in Minutes." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/ready-in-minutes.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/ready-in-minutes.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/ready-in-minutes.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/ready-in-minutes.html" />
 	</head>
 
 	<body>
