--- a/features/the-premise.html
+++ b/features/the-premise.html
@@ -7,12 +7,12 @@
 		<title>The Premise</title>
 		<meta name="description" content="The carousel at Neptune Park has a brass ring on a pole that wobbles just out of reach of the riders. A few give it a shot. Most simply never bother. There's a brass ring in everybody's life.">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="The Premise." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/the-premise.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/the-premise.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/the-premise.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/the-premise.html" />
 	</head>
 
 	<body>
