--- a/features/waiting-for-me.html
+++ b/features/waiting-for-me.html
@@ -7,12 +7,12 @@
 		<title>Waiting for Me</title>
 		<meta name="description" content="Something dawned on me the other day when I was sitting in my therapist's waiting room. Like every other time it was a room full of women, some my age, some older. There sure are a lot of unhappy women in this town!">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="Waiting for Me." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/waiting-for-me.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/waiting-for-me.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/waiting-for-me.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/waiting-for-me.html" />
 	</head>
 
 	<body>
