--- a/features/whaddya-say.html
+++ b/features/whaddya-say.html
@@ -7,12 +7,12 @@
 		<title>Whaddya Say?</title>
 		<meta name="description" content="It's been ages, but the last time I looked, it was still there.">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="Whaddya Say?" />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/whaddya-say.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/whaddya-say.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/whaddya-say.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/whaddya-say.html" />
 	</head>
 
 	<body>
