--- a/features/where-are-you-going.html
+++ b/features/where-are-you-going.html
@@ -7,12 +7,12 @@
 		<title>Where Are You Going?</title>
 		<meta name="description" content="Is this what is meant by coming full circle? Or trying to pay it forward? Or am I just kidding myself, because that's less painful that admitting that there is no hope at all, ever, anywhere.">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="Where Are You Going?" />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/where-are-you-going.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/where-are-you-going.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/where-are-you-going.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/where-are-you-going.html" />
 	</head>
 
 	<body>
