--- a/features/white-ruffles.html
+++ b/features/white-ruffles.html
@@ -7,12 +7,12 @@
 		<title>White Ruffles</title>
 		<meta name="description" content="One 2AM you covered me with wafting dollar bills won in a craps game, and I wondered what that had to do with the truck business...">
 		<link rel="stylesheet" href="../styles.css">
-		<link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+		<link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 		<meta property="og:title" content="White Ruffles." />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://he-wept.github.io/1/features/white-ruffles.html" />
-		<meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-		<link rel="canonical" href="https://he-wept.github.io/1/features/white-ruffles.html" />
+		<meta property="og:url" content="https://wallaceheller.github.io/he-wept/features/white-ruffles.html" />
+		<meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+		<link rel="canonical" href="https://wallaceheller.github.io/he-wept/features/white-ruffles.html" />
 	</head>
 
 	<body>
