--- a/privacy.html
+++ b/privacy.html
@@ -7,12 +7,12 @@
         <title>He Wept: Privacy</title>
         <meta name="description" content="The least of your problems.">
         <link rel="stylesheet" href="styles.css">
-        <link href="https://he-wept.github.io/1/favicon.png" rel="shortcut icon">
+        <link href="https://wallaceheller.github.io/he-wept/favicon.png" rel="shortcut icon">
 	    <meta property="og:title" content="Privacy." />
 	    <meta property="og:type" content="website" />
-	    <meta property="og:url" content="https://he-wept.github.io/1/privacy.html" />
-	    <meta property="og:image" content="https://he-wept.github.io/1/img/share.png" name="image">
-        <link rel="canonical" href="https://he-wept.github.io/1/privacy.html" />
+	    <meta property="og:url" content="https://wallaceheller.github.io/he-wept/privacy.html" />
+	    <meta property="og:image" content="https://wallaceheller.github.io/he-wept/img/share.png" name="image">
+        <link rel="canonical" href="https://wallaceheller.github.io/he-wept/privacy.html" />
     </head>
 
     <body>
