--- a/prologue-quickstart.html
+++ b/prologue-quickstart.html
@@ -26,7 +26,14 @@
             <img src="img/0.jpg">
             <p class="caption">Wallace Heller crafts fiction that resonates where it must and liberates where it can. All the rest is up to you.</p>
             <hr>
-            <p style="font-size:1.25rem;">He wept. Original fiction that bleeds. Poignant. Provocative. Profane. Authentic. Urgent. Explicit. <strong>Real.</strong> A torrent of tears takes one to the brink where anything is possible. Shout it out the window. Scrawl it on the wall. Tattoo it over your heart. He wept.</p>
+            <p style="font-size:1.25rem;">He wept.</p>
+			<p style="font-size:1.25rem;">Original fiction that bleeds.</p>
+			<p style="font-size:1.25rem;">Poignant. Provocative. Profane.</p>
+			<p style="font-size:1.25rem;">Authentic. Urgent. Explicit.</p>
+			<p style="font-size:1.25rem;"><strong>Real.</strong></p>
+			<p style="font-size:1.25rem;">A torrent of tears takes one to the brink where anything is possible.</p>
+			<p style="font-size:1.25rem;">Shout it out the window. Scrawl it on the wall. Tattoo it over your heart.</p>
+			<p style="font-size:1.25rem;">He wept.</p>
             <br>
 			<div style="padding:0 1rem;border: 1pt solid #000000;"><p>What you are about to experience is a work of fiction. Any resemblance to actual persons, places, themes, or events is purely coincidental.</p></div>
             <br>
